--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<section id="header">
 			<div id="headerText" class="fadein">
 			  	<h1>Hey there, I'm <b id="name">Benjamin</b>!</h1>
-				<h1 id="headerSubText">I am a creative problem solver passionate about bringing users together through meaningful product experiences.</h1>
+				<h1 id="headerSubText">I am a product manager passionate about building inclusive technology that drives human growth.</h1>
 				<a class="categorytag" id="headertag" href="mailto:benjaminhdinh@gmail.com">Get In Touch</a>
 			</div>
 			<div class="arrow bounce">
