--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                     <p class="subtitle subtitle_about">When I log off, you can find me:</p>
 					<p class="subtitle subtitle_about"><a class="hoverBold" href="https://www.instagram.com/includedavis/">💡</a> Building community and product solutions at #include.</p>
 					<p class="subtitle subtitle_about"><a class="hoverBold" href="https://www.instagram.com/seeingben/">🎞</a> Taking film pictures of everything you can imagine.</p>
-					<p class="subtitle subtitle_about"><a class="hoverBold" href="https://www.instagram.com/tiggernmillie/">😴</a> Entering deep slumber with my cats Tigger & Millie.</p>
+					<p class="subtitle subtitle_about"><a class="hoverBold" href="https://www.instagram.com/tiggernmillie/">🐱</a> Entering deep slumber with my cats Tigger & Millie.</p>
                 </div>
 				<div id="profileImage" >
 					<img src="assets/headshot.jpg" class="headshot circleShadow" alt="Benjamin Dinh">
