--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 				</div>
 			</nav>
 		</div>
-		<!-- <div id="leftIcons">
+		<div id="leftIcons">
 			<a href="https://www.linkedin.com/in/benjaminhdinh/" class="fab fa-linkedin zoom"></a>
 			<a href="https://github.com/benjaminhdinh" class="fab fa-github zoom"></a>
-			<a href="https://www.behance.net/benjaminhdinh" class="fab fa-behance zoom"></a>
+			<a href="assets/Benjamin_Dinh_Resume.pdf" class="fa fa-file-alt"></a>
 			<a href="mailto:benjaminhdinh@gmail.com" class="fa fa-envelope zoom"></a>
-		</div> -->
+		</div>
 		<section id="header">
 			<div id="headerText" class="fadein">
 			  	<h1>Hey there, I'm <b id="name">Benjamin</b>!</h1>
@@ -262,10 +262,10 @@
 		</section>
 		
 		<section id="footer">
-			<div id="bottomIcons">
+			<div id="bottomIcons" class="bottomIconsHome">
 				<a href="https://www.linkedin.com/in/benjaminhdinh/" class="fab fa-linkedin zoom"></a>
 				<a href="https://github.com/benjaminhdinh" class="fab fa-github zoom"></a>
-				<!-- <a href="https://www.behance.net/benjaminhdinh" class="fab fa-behance zoom"></a> -->
+				<a href="assets/Benjamin_Dinh_Resume.pdf" class="fa fa-file-alt"></a>
 				<a href="mailto:benjaminhdinh@gmail.com" class="fa fa-envelope zoom"></a>
 			</div>
 			<p id ="footerFont">© Benjamin Dinh <span id="year"></span></p>
