--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 			<div id="bottomIcons">
 				<a href="https://www.linkedin.com/in/benjaminhdinh/" class="fab fa-linkedin zoom"></a>
 				<a href="https://github.com/benjaminhdinh" class="fab fa-github zoom"></a>
-				<!-- <a href="https://www.behance.net/benjaminhdinh" class="fab fa-behance zoom"></a> -->
+				<a href="assets/Benjamin_Dinh_Resume.pdf" class="fa fa-file-alt"></a>
 				<a href="mailto:benjaminhdinh@gmail.com" class="fa fa-envelope zoom"></a>
 			</div>
 			<p id ="footerFont">© Benjamin Dinh <span id="year"></span></p>
