--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div id="leftIcons">
 			<a href="https://www.linkedin.com/in/benjaminhdinh/" class="fab fa-linkedin zoom"></a>
 			<a href="https://github.com/benjaminhdinh" class="fab fa-github zoom"></a>
-			<a href="assets/Benjamin_Dinh_Resume.pdf" class="fa fa-file-alt"></a>
+			<a href="assets/Benjamin_Dinh_Resume.pdf" class="fa fa-file-alt zoom"></a>
 			<a href="mailto:benjaminhdinh@gmail.com" class="fa fa-envelope zoom"></a>
 		</div>
 		<section id="header">
@@ -265,7 +265,7 @@
 			<div id="bottomIcons" class="bottomIconsHome">
 				<a href="https://www.linkedin.com/in/benjaminhdinh/" class="fab fa-linkedin zoom"></a>
 				<a href="https://github.com/benjaminhdinh" class="fab fa-github zoom"></a>
-				<a href="assets/Benjamin_Dinh_Resume.pdf" class="fa fa-file-alt"></a>
+				<a href="assets/Benjamin_Dinh_Resume.pdf" class="fa fa-file-alt zoom"></a>
 				<a href="mailto:benjaminhdinh@gmail.com" class="fa fa-envelope zoom"></a>
 			</div>
 			<p id ="footerFont">© Benjamin Dinh <span id="year"></span></p>
