--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="Hi, I'm Benjamin Dinh. Welcome to my personal website!">
 		<meta name="keywords" content="benjamin dinh, benjamin, benjamin-dinh, ben dinh, uc davis">
-		<meta property="og:title" content="Benjamin Dinh | Portfolio" />
+		<meta property="og:title" content="Benjamin Dinh" />
 		<meta name="image" property="og:image" content="assets/preview.png"/>
 		<meta name="author" content="Benjamin Dinh" />
 		<meta property="og:description" content="Hi, I'm Benjamin Dinh. Welcome to my personal website!"/>
@@ -17,7 +17,7 @@
 		<link rel="stylesheet" href="main.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
 	
-		<title>Benjamin Dinh | Portfolio</title>
+		<title>Benjamin Dinh</title>
 		<link rel="icon" href="assets/favicon.ico">
     </head>
     
@@ -64,7 +64,7 @@
 		<section id="header">
 			<div id="headerText" class="fadein">
 			  	<h1>Hey there, I'm <b id="name">Benjamin</b>!</h1>
-				<h1 id="headerSubText">I am a product manager passionate about building inclusive technology that drives human growth.</h1>
+				<h1 id="headerSubText">I am a product leader passionate about building inclusive technology that drives human growth.</h1>
 				<a class="categorytag" id="headertag" href="mailto:benjaminhdinh@gmail.com">Get In Touch</a>
 			</div>
 			<div class="arrow bounce">
