--- a/about.html
+++ b/about.html
@@ -61,8 +61,8 @@
                     <br>
                     <p class = "title_about">After Hours</p>
                     <p class="subtitle subtitle_about">When I log off, you can find me:</p>
-					<p class="subtitle subtitle_about"><a class="hoverBold" href="https://www.instagram.com/includedavis/">💡</a> Building community and product solutions at #include.</p>
 					<p class="subtitle subtitle_about"><a class="hoverBold" href="https://www.instagram.com/seeingben/">🎞</a> Taking film pictures of everything you can imagine.</p>
+					<p class="subtitle subtitle_about"><a class="hoverBold" href="https://www.strava.com/athletes/112768022">🏃‍♂️</a> Running up all the hills you can imagine in San Francisco.</p>
 					<p class="subtitle subtitle_about"><a class="hoverBold" href="https://www.instagram.com/tiggernmillie/">🐱</a> Entering deep slumber with my cats Tigger & Millie.</p>
                 </div>
 				<div id="profileImage" >
