--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						<div>
 							<h2>Tuberculosis Drug Resistance</h2>
 							<p class="subtitle_bold">A model to analyze gene mutation signals for drug resistance</p>
-							<p class="subtitle_date">Fall 2022</p>
+							<p class="subtitle_date">Winter 2022</p>
 							<p class="subtitle">Collaborated with 4 teammates to build 3 machine learning models that determine thresholds for gene mutation signals. Looked at whether molecular probes that detect these mutations yield high or low signals. Decision tree model achieved highest accuracy rate of 99%.</p>
 						</div>
 						<div class="buttonrow">
